fix: body layout when modal is visible (#812)
Fixes #811

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -102,7 +102,7 @@ body {
 	min-height: 100vh;
 }
 body:has(dialog[open]) {
-	position: fixed;
+	overflow: hidden;
 }
 a {
 	color: var(--colors-high);
